--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY="AIzaSyCxxdYKp3vrKPZO3BumGevothIMwX3Biq8"
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
+API_KEY=""
+DB_HOST=
+DB_PORT=
+DB_USER=
 DB_PASSWORD=
-DB_NAME=preguntas
+DB_NAME=
